Featured projects, Image links

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                                     <div class="col-md-4 mb-3">
                                         <div class="card">
-                                            <img class="img-fluid" alt="100%x280" src="projects/oarklimited.png">
+                                            <a href="https://oarklimited.com"> <img class="img-fluid" alt="100%x280" src="projects/oarklimited.png"> </a>
                                             <div class="card-body">
                                                 <h4 class="card-title">Oark Limited</h4>
                                                 <p class="card-text">
@@ -191,7 +191,7 @@
                                     </div>
                                     <div class="col-md-4 mb-3">
                                         <div class="card">
-                                            <img class="img-fluid" alt="100%x280" src="projects/kmtc.png">
+                                           <a href="https://repository.kmtc.ac.ke/xmlui/"> <img class="img-fluid" alt="100%x280" src="projects/kmtc.png"> </a>
                                             <div class="card-body">
                                                 <h4 class="card-title">Kenya Medical Training College Repository</h4>
                                                 <p class="card-text">Digital repository that allows students to
@@ -202,7 +202,7 @@
                                     </div>
                                     <div class="col-md-4 mb-3">
                                         <div class="card">
-                                            <img class="img-fluid" alt="100%x280" src="projects/dccl.png">
+                                            <a href="https://dharkemmycommunications.co.ke"> <img class="img-fluid" alt="100%x280" src="projects/dccl.png"> </a>
                                             <div class="card-body">
                                                 <h4 class="card-title">DCCL Website</h4>
                                                 <p class="card-text">
@@ -222,7 +222,7 @@
 
                                     <div class="col-md-4 mb-3">
                                         <div class="card">
-                                            <img class="img-fluid" alt="100%x280" src="projects/aquaverse.png">
+                                            <a href="https://aquaverse.africa"> <img class="img-fluid" alt="100%x280" src="projects/aquaverse.png"> </a>
                                             <div class="card-body">
                                                 <h4 class="card-title">Aquaverse</h4>
                                                 <p class="card-text">An incorporated water bottling and packaging plant located
@@ -235,7 +235,7 @@
                                     </div>
                                     <div class="col-md-4 mb-3">
                                         <div class="card">
-                                            <img class="img-fluid" alt="100%x280" src="projects/autocare.jpeg">
+                                            <a href="https://github.com/joshuakilaha/AutoCare"> <img class="img-fluid" alt="100%x280" src="projects/autocare.jpeg"></a>
                                             <div class="card-body">
                                                 <h4 class="card-title">AutoCare IOS Application</h4>
                                                 <p class="card-text">An E-commerce application  where a
@@ -247,7 +247,7 @@
                                     </div>
                                     <div class="col-md-4 mb-3">
                                         <div class="card">
-                                            <img class="img-fluid" alt="100%x280" src="projects/dishi.png" height="10">
+                                           <a href="http://dishi.undatechinnovations.co.ke"> <img class="img-fluid" alt="100%x280" src="projects/dishi.png" height="10"> </a>
                                             <div class="card-body">
                                                 <h4 class="card-title">Dishi Food App</h4>
                                                 <p class="card-text">
