--- a/index.html
+++ b/index.html
@@ -171,10 +171,53 @@
                 <div class="col-12">
                     <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
 
+                        <!-- IOS APPs-->
                         <div class="carousel-inner">
+
                             <div class="carousel-item active">
                                 <div class="row">
 
+                                    <div class="col-md-4 mb-3">
+                                        <div class="card">
+                                            <a href="https://play.google.com/store/apps/details?id=com.mafunzo.loop"> <img class="img-fluid" alt="100%x280" src="projects/mafunzo.png"> </a>
+                                            <div class="card-body">
+                                                <h4 class="card-title">Mafunzo Loop</h4>
+                                                <p class="card-text"> Loop is an app developed by Mafunzo to help parent's stay in touch with their child's education as 
+                                                    well as for schools to cultivate a vibrant community of parents, teachers and students.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+                                    <div class="col-md-4 mb-3">
+                                        <div class="card">
+                                            <a href="https://github.com/Ultra-Techies/ghala-ios"> <img class="img-fluid" alt="100%x280" src="projects/ghala.png"> </a>
+                                            <div class="card-body">
+                                                <h4 class="card-title">Ghala</h4>
+                                                <p class="card-text"> An IOS version of a warehouse management system, that helps in managing day-to-day operations in a warehouse.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4 mb-3">
+                                        <div class="card">
+                                            <a href="https://github.com/joshuakilaha/Wasanii"> <img class="img-fluid" alt="100%x280" src="projects/wasanii.png"> </a>
+                                            <div class="card-body">
+                                                <h4 class="card-title">Wasanii</h4>
+                                                <p class="card-text"> A space where various activities and events taking place are posted to create
+                                                     awareness among active seekers about the local arts and culture scene.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+
+
+                         <!-- Web Apps & Wordpress-->
+                            <div class="carousel-item">
+                                <div class="row">
                                     <div class="col-md-4 mb-3">
                                         <div class="card">
                                             <a href="https://oarklimited.com"> <img class="img-fluid" alt="100%x280" src="projects/oarklimited.png"> </a>
@@ -186,9 +229,9 @@
                                                     building quality software using the latest technologies.</p>
 
                                             </div>
-
                                         </div>
                                     </div>
+
                                     <div class="col-md-4 mb-3">
                                         <div class="card">
                                            <a href="https://repository.kmtc.ac.ke/xmlui/"> <img class="img-fluid" alt="100%x280" src="projects/kmtc.png"> </a>
@@ -217,6 +260,7 @@
 
                                 </div>
                             </div>
+
                             <div class="carousel-item">
                                 <div class="row">
 
