--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         </head>
+
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YK43JP3VHV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YK43JP3VHV');
+</script>
+
     <body oncontextmenu='return false' class='snippet-body'>
     <!-- Scroll Up -->
     <div class="scrollUp-btn">
